--- a/index.css
+++ b/index.css
@@ -3,8 +3,8 @@ img{
     height: auto;
 }
 aside{
-    width: 1200px;
-    margin: 24px;
+    width: auto;
+    margin: auto;
     padding: 10px;
 }
 main img {
