--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,9 @@ aside{
 aside img{
     width: 200px;
     height: auto;
-}
+    border: solid #2344;
+    padding:0;
+    }
 h1{
     color: white;
     border-radius: 12px;
@@ -33,10 +35,15 @@ h2{
     background: linear-gradient(to right, #0b7783, #0b77 #0b7783);
 }
 nav a{
-    color: white;
+    color: darkblue;
     margin: 0 1.5rem;
-    font-weight: bold;
+    font-weight: bolder;
     transition: color o.2s;
+    letter-spacing: 0.4rem;
+    font-size: 1.5rem;
+    box-shadow: #eaf6fb 0.5rem;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+
 }
 nav{
     background: #0b7783;
@@ -48,8 +55,11 @@ nav{
 main{
     margin: 2rem auto;
     max-width: 800px;
-    background: #0b7783;
+    background:  #03393f98;
     padding: 2rem;
+    align-items: center;
+    position: relative;
+    justify-content: center;
     border-radius: 10px;
     text-align: center;
     box-shadow: 0 2px 8px rgb(44,62,80,0.07) ;
@@ -59,7 +69,9 @@ main img{
     width: 200px;
     height: auto;    
     padding: 0px;
-    border-radius: 150px; 
+    display: flex;
+    float: clear; 
+
 }
 footer{
     margin-top:2rem;
@@ -73,8 +85,12 @@ footer{
 }
 p{
     padding: 0;
+    font-size: 1.2rem;
+    font-weight: bold 0.2rem;
+    text-spacing-trim: 2rem;
 }
 body{
-  background: linear-gradient(to right, #7ac3e2 59%, rgb(9, 73, 95)); 
+    display:-ms-inline-flexbox;
+  background: linear-gradient(to right,); 
   
 }
