--- a/wwr/style/rafting.css
+++ b/wwr/style/rafting.css
@@ -6,12 +6,13 @@
     --dark: #111;
     --shadow: 0 4px 24px rgba(26,62,111,0.12);
 }
-section {
+section img {
     padding: 2rem;
     margin: 1rem 0;
     background:linear-gradient(to rigth, rgb(123, 177, 196),rgb(11, 143, 136));
     border-radius: 8px;
     box-shadow: var(--shadow);
+    width: 400px;
 }
 body {
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
