Refactor code structure for improved readability and maintainability

--- a/wwr/style/rafting.css
+++ b/wwr/style/rafting.css
@@ -274,7 +274,7 @@ footer img:hover {
 }
 
 .about-article{
-    background-image: url('.../images/rafting-hero.png');
+    background-image: url('../images/rafting-hero.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
