--- a/wwr/style/rafting.css
+++ b/wwr/style/rafting.css
@@ -123,15 +123,15 @@ header nav a:hover {
 .image {
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
-    margin: rem 0;
+    gap: 0.4rem;
+    margin: 1rem 0;
 }
 
 .image figure {
     background: #fff;
     border-radius: 12px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    padding: 0.5rem;
+    padding: 1rem;
     text-align: center;
 }
 
@@ -156,13 +156,13 @@ header nav a:hover {
     color: var(--secondary-color);
     font-weight: 500;
     margin-top: 4px;
-    letter-spacing: 0.5px;
+    letter-spacing: 2px;
 }
 
 /* Footer */
 footer {
     display: flex;
-    justify-content: space-between; /* Added space between icons and text */
+    justify-content: space-between; 
     align-items: center;
     background: linear-gradient(90deg, var(--secondary-color) 0%, var(--primary-color) 100%);
     color: #fff;
@@ -284,6 +284,7 @@ footer img:hover {
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     border-radius: 12px; 
     position: relative;
+    
 }
 
 .about-article::before {
