--- a/wwr/style/rafting.css
+++ b/wwr/style/rafting.css
@@ -294,14 +294,14 @@ footer img:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* Reduced background image light */
+    background: rgba(0, 0, 0, 0.5); 
     z-index: 1;
-    border-radius: 12px; /* Match the article's rounded corners */
+    border-radius: 12px; 
 }
 
 .about-article > * {
     position: relative;
-    z-index: 2; /* Ensure content is above the overlay */
+    z-index: 2; 
 }
 
 .Awaits{
@@ -309,8 +309,8 @@ footer img:hover {
 }
 
 .par-footer p {
-    margin: 0; /* Reset margin for footer text */
-    font-size: 1rem; /* Consistent font size */
-    color: #000; /* Changed footer text color for better visibility */
-    padding: 0.5rem; /* Added padding for spacing */
+    margin: 0; 
+    font-size: 1rem; 
+    color: #000; 
+    padding: 0.5rem;
 }
