--- a/wwr/style/rafting.css
+++ b/wwr/style/rafting.css
@@ -123,15 +123,15 @@ header nav a:hover {
 .image {
     display: flex;
     flex-wrap: wrap;
-    gap: 0.4rem;
-    margin: 1rem 0;
+    gap: 1rem;
+    margin: rem 0;
 }
 
 .image figure {
     background: #fff;
     border-radius: 12px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    padding: 1rem;
+    padding: 0.5rem;
     text-align: center;
 }
 
@@ -156,7 +156,7 @@ header nav a:hover {
     color: var(--secondary-color);
     font-weight: 500;
     margin-top: 4px;
-    letter-spacing: 2px;
+    letter-spacing: 0.5px;
 }
 
 /* Footer */
@@ -312,5 +312,5 @@ footer img:hover {
     margin: 0; 
     font-size: 1rem; 
     color: #000; 
-    padding: 0.5rem;
+    padding: 0.5rem; 
 }
