--- a/wwr/style/rafting.css
+++ b/wwr/style/rafting.css
@@ -124,7 +124,7 @@ header nav a:hover {
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
-    margin: 3 0;
+    margin: 0;
 }
 
 .image figure {
