--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -284,6 +284,7 @@
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
             border-radius: 20px;
             position: relative;
+            background-size: cover;
         }
 
         .about-article::before {
